--- a/style.css
+++ b/style.css
@@ -1,13 +1,36 @@
-.top-players {
-  display: grid;
-  grid-template-columns: repeat (3, 1fr);
-  grid-gap: 30px;
+*{
+  margin: 0;
+  padding: 0;
 }
-.player {
+main{ 
+  width: 1200px;
+  max-width: 90%;
+  margin: 0 auto;
+}
+.top-players, .blogs{
+  display: grid;
+  grid-gap: 30px;
+  margin-top: 20px;
+}
+.top-players{
+  grid-template-columns: repeat(3, 1fr);
+}
+.blogs{
+  grid-template-columns: repeat(2, 1fr);
+}
+.player, .blog {
   display: flex;
   align-items: center;
 }
 .player img {
   height: 50px;
   margin-right: 20px;
+}
+@media (max-width: 992px){
+  .top-players {
+    grid-template-columns: repeat(2, 1fr);
+}
+@media (max-width: 688px){
+  .top-players {
+    grid-template-columns: repeat(1, 1fr);
 }
