--- a/css/style.css
+++ b/css/style.css
@@ -7,13 +7,13 @@ main{
   max-width: 90%;
   margin: 0 auto;
 }
-.top-players, .blogs{
+.top-players, .blogs, .courses{
   display: grid;
   grid-gap: 30px;
   margin-top: 20px;
   place-items: center;
 }
-.top-players{
+.top-players, .courses{
   grid-template-columns: repeat(3, 1fr);
 }
 .blogs{
@@ -31,11 +31,21 @@ main{
   width: 200px;
   margin-right: 20px;
 }
+.filled{
+  color:goldenrod;
+  font-size: 0.8em;
+}
+.unfilled{
+  color:lightgray;
+  font-size: 0.8em;
+}
+.course-info{
+  display: flex;
+}
 @media (max-width: 992px){
   .top-players {
     grid-template-columns: repeat(2, 1fr);
 }
-
 .blogs{
   grid-template-columns: repeat(1, 1fr);
 }
@@ -44,5 +54,4 @@ main{
     grid-template-columns: repeat(1, 1fr);
 }
 .blog{
-  display: block;
-}
+  display: block;}
