--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,24 @@
-*{
+{
   margin: 0;
   padding: 0;
 }
+body{
+  background-color: royalblue;
+  font-family: 'Poppins', sans-serif;
+}
 main{ 
-  width: 1200px;
+  width: 900px;
   max-width: 90%;
   margin: 0 auto;
+}
+section{
+  background-color: white;
+  padding: 1em;
+  margin: 1em;
+  border-radius: 10px;
+}
+.section-title{
+  color: violet;
 }
 .top-players, .blogs, .courses{
   display: grid;
@@ -39,19 +52,24 @@ main{
   color:lightgray;
   font-size: 0.8em;
 }
+.course img{
+  width: 200px;
+ height: 100px;
+}
 .course-info{
   display: flex;
 }
 @media (max-width: 992px){
-  .top-players {
+  .top-players, .courses{
     grid-template-columns: repeat(2, 1fr);
 }
 .blogs{
   grid-template-columns: repeat(1, 1fr);
 }
 @media (max-width: 688px){
-  .top-players {
+  .top-players, .courses{
     grid-template-columns: repeat(1, 1fr);
 }
 .blog{
-  display: block;}
+  display: block;
+}
